--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,5 +1,6 @@
 .introduction-container{
-    margin-top: 25vh;
+    padding-top: 25vh;
+    padding-bottom: 5vh;
     display: flex;
     gap: 5vw;
     width: 80vw;
@@ -73,7 +74,6 @@
     width: 100vw;
     padding: 5vh 10vw;
     box-sizing: border-box;
-    margin-top: 5vh;
     color: var(--secondary-light);
     h2{
         font-size: 36px;
@@ -94,11 +94,12 @@
 
 .how-it-works{
     width: 100vw;
-    padding: 5vh 10vw;
+    padding: 0 10vw;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    margin-top: 5vh;
     gap: 8vh;
     h2{
         font-size: 36px;
