--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -1,6 +1,6 @@
 .introduction-container{
     padding-top: 25vh;
-    padding-bottom: 5vh;
+    padding-bottom: 15vh;
     display: flex;
     gap: 5vw;
     width: 80vw;
@@ -95,23 +95,24 @@
 .how-it-works{
     width: 100vw;
     padding: 0 10vw;
-    padding-top: 10vh;
+    padding-top: 20vh;
     padding-bottom: 5vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: 8vh;
+    gap: 15vh;
     h2{
-        font-size: 36px;
+        font-size: 48px;
         font-weight: 700;
         color: var(--bg-dark);
         margin: 0;
     }
     h3{
-        font-size: 24px;
-        font-weight: 400;
+        font-size: 36px;
+        font-weight: 700;
         color: var(--secondary-dark);
         margin: 0;
+        margin-bottom: 5vh;
     }
     p{
         font-size: 18px;
@@ -119,6 +120,12 @@
         color: var(--accent-color);
         margin: 0;
     }
+}
+
+.steps{
+    display: flex;
+    flex-direction: column;
+    gap: 10vh;
 }
 
 .step{
@@ -136,7 +143,38 @@
     gap: 2vh;
 }
 
-.step-image{
+.step-image {
+    width: 35vw;
+    height: calc( 35vw * 2 / 3);
+    overflow: hidden; 
+    position: relative; /* Make the container a reference point for absolute positioning */
+}
+
+.step-image img {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);  /* Center the image within the container */
+}
+
+.how-it-works .step:nth-child(odd) .step-image {
+    border-radius: 10vh 10vw 10vh 10vw;
+}
+
+.how-it-works .step:nth-child(even) .step-image {
+    border-radius: 10vw 10vh 10vw 10vh;
+}
+
+.how-it-works .step:nth-child(odd) .step-image img{
+    border-radius: 10vh 10vw 10vh 10vw;
+}
+
+.how-it-works .step:nth-child(even) .step-image img{
+    border-radius: 10vw 10vh 10vw 10vh;
+}
+
+/* .step-image{
     width: 35vw;
     img{
         width: 100%;
@@ -150,7 +188,7 @@
 
 .how-it-works .step:nth-child(even) .step-image img {
     border-radius: 10vw 10vh 10vw 10vh;
-}
+} */
 
 .testimonials-container{
     display: flex;
