--- a/styles/precios.css
+++ b/styles/precios.css
@@ -4,7 +4,25 @@
     justify-content: center;
     align-items: center;
     padding-top: 25vh;
-    gap: 5vh;
+}
+
+.white-space{
+    width: 102%;
+    z-index: 150;
+    height: 5vh;
+    background-color: white;
+    transition: height 0.3s ease-in-out;
+}
+
+.white-space.sticky{
+    position:sticky;
+    top: 19vh;
+    height: calc(6vh + 20px);
+}
+
+.white-space.free{
+    position: absolute;
+    bottom: calc(396px + 12vh);
 }
 
 .pricing-grid {
@@ -13,46 +31,67 @@
     display: grid;
     grid-template-columns: repeat(3,minmax(250px,1fr));  /* Two equal columns */
     align-items: center;
-    box-shadow: 0 0 5px lightgray;
+    box-shadow: 0px 5px 5px lightgray;
+}
+
+.intersection-tracker{
+    height: 1px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .header-cell{ 
+    z-index: 150;
+    background-color: white;
+}
+
+.header-text{
+    background-color: #f5f7fb;
     height: 20px;
     padding: 0 10px;
     padding-top: 5vh;
     padding-bottom: 3vh;
     font-weight: bold;
-    position: sticky;
-    top: 0;
-    z-index: 150;
-    background-color: #f5f7fb;
 }
 
-:nth-child(1 of .header-cell), .row-label{
+.header-cell.sticky { /* Add a class to the row containing the header cells */
+    position: sticky;
+    top: 25vh;
+    /* background-color: #f5f7fb; Match your grid background */
+    z-index: 150; /* Ensure the headers stay on top */
+}
+
+.header-cell.free { /* Add a class to the row containing the header cells */
+    position: absolute;
+    bottom: calc(376px + 4vh);
+}
+
+:nth-child(1 of .header-cell) .header-text, .row-label{
     padding-left: 5vw;
+    border-radius: 20px 0 0 0;
 }
-:nth-child(3 of .header-cell), .price-cell{
+:nth-child(3 of .header-cell) .header-text, .price-cell{
     padding-right: 5vw;
+    border-radius: 0 20px 0 0;
 }
 
-:nth-child(1 of .separator){
+.separator-container.sticky{
     position: sticky;
-    top: 0;
+    top: calc(33vh + 20px);
     z-index: 150;
 }
 
-.header-cell:nth-child(2){
+.separator-container.free{
+    position: absolute;
+    bottom: 375px;
+}
+
+:nth-child(2 of .header-cell){
     text-align: left;
 }
-.header-cell:nth-child(3){
+:nth-child(3 of .header-cell){
     text-align: right;
-}
-
-.header-cell .sticky { /* Add a class to the row containing the header cells */
-    position: sticky;
-    top: 0; 
-    background-color: #f5f7fb; /* Match your grid background */
-    z-index: 2; /* Ensure the headers stay on top */
 }
 
 .row-label{
@@ -127,6 +166,10 @@
     padding-bottom: 5vh;
     scroll-margin-top: 30vh;
 }
+#footnote3{
+    padding-top: 3vh;
+    scroll-margin-top: 30vh;
+}
 
 .booking-button{
     font-size: 18px;
@@ -146,4 +189,36 @@
 
 sup a{
     color: black;
+}
+
+.promociones-container{
+    padding-top: 10vh;
+}
+
+.promociones{
+    display: flex;
+    max-width: 750px;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f5f7fb;
+    border-radius: 20px;
+    justify-content: center;
+    box-shadow: 0px 5px 5px lightgray;
+    padding-bottom: 5vh;
+}
+
+.promociones-title{
+    padding: 0 5vw;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    font-weight: 700;
+}
+.promociones-text{
+    padding: 10px 0;
+    padding-left: 10vw;
+    padding-right: 5vw;
+}
+
+li{
+    padding: 10px;
 }
