--- a/styles/nutricion-clinica.css
+++ b/styles/nutricion-clinica.css
@@ -1,4 +1,58 @@
-/* i{
-    width: 10px;
-    height: 10px;
-} */
+.description-container{
+    padding-top: 25vh;
+    padding-bottom: 10vh;
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    width: 80vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.service-image{
+    width: 80%;
+    border-radius: 5%;
+    img{
+        width: 100%;
+        border-radius: 5%;
+    }
+}
+
+.booking-button{
+    font-size: 18px;
+    display: inline-block;
+    justify-self: center;
+    padding: 14px 23px;
+    background-color: var(--bg-light);
+    color: white;
+    border-radius: 23px;
+    margin-right: auto;
+    margin-top: 3vh;
+}
+
+.booking-button:hover{
+    transform: scale(1.05);
+}
+
+.service-value{
+    background-color: var(--bg-dark);
+    width: 100vw;
+    padding: 5vh 10vw;
+    box-sizing: border-box;
+    color: var(--secondary-light);
+    h2{
+        font-size: 36px;
+        font-weight: 700;
+    }
+    p{
+        font-size: 24px;
+        font-weight: 400;
+    }
+    ul{
+        font-size: 18px;
+        font-weight: 400;
+        :nth-child(-n+3){
+            margin-bottom: 2vh;
+        }
+    }
+}
