--- a/styles/servicio.css
+++ b/styles/servicio.css
@@ -1,6 +1,6 @@
 .description-container{
-    padding-top: 25vh;
-    padding-bottom: 10vh;
+    padding-top: 30vh;
+    /* padding-bottom: 10vh; */
     display: flex;
     flex-direction: column;
     gap: 5vw;
@@ -9,12 +9,32 @@
     align-items: center;
 }
 
-.service-image{
-    width: 80%;
-    border-radius: 5%;
-    img{
-        width: 100%;
-        border-radius: 5%;
+.service{
+    text-align: center;
+    padding-bottom: 5vh;
+}
+
+.service-image {
+    width: 60vw;
+    height: calc( 60vw * 2 / 3);
+    overflow: hidden; 
+    position: relative; /* Make the container a reference point for absolute positioning */
+}
+
+.service-image img {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);  /* Center the image within the container */
+}
+
+.service-summary{
+    padding: 5vh 0;
+    ul{
+        :nth-child(-n+3){
+            margin-bottom: 2vh;
+        }
     }
 }
 
@@ -55,4 +75,9 @@
             margin-bottom: 2vh;
         }
     }
+}
+
+.service-summary{
+    font-size: 24px;
+    font-weight: 400;
 }
