--- a/styles/servicio.css
+++ b/styles/servicio.css
@@ -64,13 +64,12 @@
         font-size: 36px;
         font-weight: 700;
     }
-    p{
-        font-size: 24px;
-        font-weight: 400;
-    }
+}
+
+.value-text{
+    font-size: 24px;
+    font-weight: 400;
     ul{
-        font-size: 18px;
-        font-weight: 400;
         :nth-child(-n+3){
             margin-bottom: 2vh;
         }
