--- a/styles/inicio-mobile.css
+++ b/styles/inicio-mobile.css
@@ -1,4 +1,5 @@
 .introduction-container{
+    padding-top: 12vh;
     flex-direction: column;
     gap: 5vh;
     width: 98vw;
@@ -11,7 +12,7 @@
 }
 
 .intro-image{
-    width: 80vw;
+    width: 70vw;
     order: -1;
 }
 
@@ -33,7 +34,6 @@
 }
 
 .how-it-works{
-    padding: 0 2vw;
     padding-top: 10vh;
     padding-bottom: 5vh;
     display: flex;
@@ -41,6 +41,7 @@
     gap: 5vh;
     h2{
         font-size: 24px;
+        text-align: center;
     }
     h3{
         font-size: 20px;
@@ -82,15 +83,15 @@
 }
 
 .testimonial-image{
-    width: 80vw;
+    width: 60vw;
 }
 
 .testimonial-text{
-    width: 80vw;
+    width: 60vw;
 }
 
 .testimonial-quote{
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .testimonial-author{
@@ -103,19 +104,10 @@
     gap: 5vh;
 }
 
-.testimonial-image{
-    width: 80vw;
-}
-
-.testimonial-quote{
-    font-size: 16px;
-    /* font-style: italic;
-    font-weight: 400;
-    text-align: left;
-    color: var(--secondary-dark);
-    margin: 0; */
-}
-
 .testimonial-author{
     font-size: 16px;
+}
+
+.back-icon, .forward-icon{
+    width: 5vw;
 }
