--- a/styles/servicio.css
+++ b/styles/servicio.css
@@ -3,7 +3,7 @@
     /* padding-bottom: 10vh; */
     display: flex;
     flex-direction: column;
-    gap: 5vw;
+    gap: 5vh;
     width: 80vw;
     justify-content: center;
     align-items: center;
