Style mobile version of diabetes

--- a/styles/servicio-mobile.css
+++ b/styles/servicio-mobile.css
@@ -1,5 +1,5 @@
 .description-container{
-    padding-top: 12vh;
+    padding-top: 15vh;
     padding-bottom: 5vh;
     h1{
         font-size: 36px;
@@ -22,12 +22,14 @@
             margin-bottom: 2vh;
         }
     }
+    text-align: center;
 }
 
 .service-value{
     h2{
         font-size: 20px;
     }
+    text-align: center;
 }
 
 .value-text{
