--- a/app/src/components/Header.module.css
+++ b/app/src/components/Header.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: sticky;
+  top: 0;
   .banner {
     width: 100%;
     display: flex;
