--- a/app/src/main.css
+++ b/app/src/main.css
@@ -5,3 +5,11 @@
   --secondary-light: #d4e5fa;
   --secondary-dark: #3d4145;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  font-family: "Montserrat", sans-serif;
+}
