--- a/app/src/routes/servicios/Servicios.module.css
+++ b/app/src/routes/servicios/Servicios.module.css
@@ -1,8 +1,3 @@
-.main-container {
-  flex-direction: column;
-  align-items: center;
-}
-
 .main-text {
   font-size: 48px;
   font-weight: 700;
@@ -57,44 +52,34 @@
 
 .booking-button {
   font-size: 18px;
+  display: inline-block;
   justify-self: center;
-  padding: 12px 24px;
+  padding: 14px 23px;
   background-color: var(--bg-light);
   color: white;
   border-radius: 23px;
   margin-right: auto;
   margin-top: 3vh;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 .booking-button:hover {
   transform: scale(1.05);
 }
 
-.value-proposition {
-  background-color: var(--bg-dark);
-  padding: 16px 32px;
-  color: var(--secondary-light);
-  h2 {
-    font-size: 36px;
-    font-weight: 700;
-  }
-  p {
-    font-size: 24px;
-    font-weight: 400;
-  }
-  ul {
-    font-size: 18px;
-    font-weight: 400;
-    :nth-child(-n + 3) {
-      margin-bottom: 2vh;
-    }
+.intro-image {
+  width: 25vw;
+  border-radius: 20px;
+  margin: 2vh 0;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 }
 
-.how-it-works {
-  padding: 32px 32px 16px 32px;
+.services-overview {
+  padding: 32px 16px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -120,13 +105,13 @@
   }
 }
 
-.steps {
+.services {
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
 
-.step {
+.service {
   display: flex;
   justify-content: center;
   gap: 32px;
@@ -137,32 +122,39 @@
   }
 }
 
-.step-text {
+.service-text {
   width: 50%;
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-.step:nth-child(odd) img {
-  border-radius: 32px 64px;
+.service:nth-child(odd) img {
+  border-radius: 10vh 10vw 10vh 10vw;
 }
 
-.step:nth-child(even) img {
-  border-radius: 64px 32px;
+.service:nth-child(even) img {
+  border-radius: 10vw 10vh 10vw 10vh;
 }
 
-.testimonials-container {
-  display: flex;
-  flex-direction: column;
-  padding: 16px 32px;
-  h2 {
-    font-size: 36px;
-    font-weight: 700;
-    color: var(--bg-dark);
-    margin: 0;
-    text-align: center;
-  }
+.service-learn-more {
+  font-size: 18px;
+  width: 100%;
+  text-align: center;
+  padding: 14px 23px;
+  box-sizing: border-box;
+  border: solid 1px var(--accent-color);
+  color: var(--accent-color);
+  border-radius: 23px;
+  margin-right: auto;
+  margin-top: 8px;
+}
+
+.service-learn-more:hover {
+  border: solid 1px var(--bg-light);
+  transform: scale(1.01);
+  cursor: pointer;
+  color: var(--bg-light);
 }
 
 .cta-container {
