--- a/app/src/components/Header.module.css
+++ b/app/src/components/Header.module.css
@@ -19,11 +19,60 @@
     }
   }
   & nav {
-    padding-top: 8px;
+    padding: 8px 0;
     width: 100%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
+    .nav-tab {
+      width: 100%;
+      display: grid;
+      grid-template-rows: 20px 0fr;
+      position: relative;
+      .hide {
+        opacity: 0;
+        transform-origin: top;
+        transform: scaleY(0);
+        pointer-events: none;
+      }
+      .show {
+        opacity: 1;
+        transform-origin: top;
+        transform: scaleY(1);
+        transition: all 0.3s ease;
+      }
+      & ul {
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        overflow: hidden;
+        position: absolute;
+        top: 20px;
+        background-color: white;
+        margin: 0;
+        padding: 16px;
+        list-style: none;
+        box-shadow: 5px 5px 5px lightgray;
+        & li {
+          padding-top: 16px;
+          border-top: solid 1px var(--secondary-dark);
+          & a {
+            border: none;
+            width: 100%;
+          }
+        }
+      }
+    }
+    .nav-tab:has(.active) {
+      .nav-tab-title {
+        font-weight: 800;
+        color: var(--accent-color);
+      }
+    }
+    .nav-tab:hover {
+      grid-template-rows: 20px 1fr;
+    }
     & a {
       color: var(--secondary-dark);
       text-decoration: none;
