--- a/app/src/main.css
+++ b/app/src/main.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   margin: 0;
   width: 100vw;
+  overflow-x: hidden;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
 }
