--- a/app/src/routes/Contacto.module.css
+++ b/app/src/routes/Contacto.module.css
@@ -71,7 +71,7 @@
   box-shadow: 0 0 5px lightgray;
   padding: 5vh 2vw;
   border-radius: 10px;
-  margin-bottom: 2vh;
+  margin-bottom: 32px;
   & fieldset {
     border: none;
     display: flex;
@@ -172,4 +172,26 @@ input::placeholder {
 
 #result {
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .details-container {
+    flex-direction: column;
+    text-align: center;
+    padding: 16px;
+  }
+  .clinic-details {
+    width: 100%;
+    padding: 16px 0;
+    text-align: center;
+  }
+  .phone,
+  .address {
+    justify-content: center;
+  }
+  .patient-details {
+    & label {
+      text-align: left;
+    }
+  }
 }
