--- a/app/src/routes/Precios.module.css
+++ b/app/src/routes/Precios.module.css
@@ -3,7 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 32px;
+  padding: 32px;
+  & h1 {
+    color: var(--secondary-dark);
+  }
 }
 
 .pricing-grid {
@@ -179,4 +182,29 @@ li {
   font-weight: 700;
   color: var(--secondary-dark);
   margin: 5vh 0;
+}
+
+@media (max-width: 600px) {
+  .main-text {
+    font-size: 24px;
+  }
+
+  .secondary-text {
+    font-size: 20px;
+  }
+
+  .small-italic {
+    font-size: 16px;
+  }
+
+  .small-bold {
+    font-size: 16px;
+  }
+  .precios-container {
+    text-align: center;
+    padding: 16px;
+  }
+  .pricing-grid {
+    grid-template-columns: repeat(3, minmax(120px, 1fr));
+  }
 }
