--- a/app/src/routes/servicios/Servicios.module.css
+++ b/app/src/routes/servicios/Servicios.module.css
@@ -184,3 +184,76 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .main-container {
+    text-align: center;
+  }
+  .intro {
+    flex-direction: column-reverse;
+    .intro-text {
+      width: 100%;
+    }
+  }
+  .main-text {
+    font-size: 24px;
+  }
+
+  .secondary-text {
+    font-size: 20px;
+  }
+
+  .small-italic {
+    font-size: 16px;
+  }
+
+  .small-bold {
+    font-size: 16px;
+  }
+  .booking-button {
+    margin: 0 auto;
+  }
+  .services-overview {
+    padding: 32px 16px;
+    gap: 16px;
+    h2 {
+      font-size: 24px;
+    }
+    h3 {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+    p {
+      font-size: 16px;
+    }
+  }
+  .service {
+    flex-direction: column;
+    gap: 16px;
+    & img {
+      max-width: 100%;
+      width: 80%;
+    }
+  }
+  .service:nth-child(odd) img {
+    border-radius: 16px;
+  }
+
+  .service:nth-child(even) img {
+    border-radius: 16px;
+    order: -1;
+  }
+  .service-text {
+    width: 100%;
+    text-align: center;
+  }
+  .cta-container {
+    padding: 32px 16px;
+    .cta {
+      h2 {
+        font-size: 24px;
+      }
+      width: 100%;
+    }
+  }
+}
