--- a/app/src/components/MobileHeader.module.css
+++ b/app/src/components/MobileHeader.module.css
@@ -7,6 +7,7 @@
   padding: 8px 16px;
   box-sizing: border-box;
   top: 0;
+  z-index: 1;
   .banner {
     flex: 1;
     display: flex;
@@ -17,7 +18,6 @@
     }
   }
   .menu-button {
-    z-index: 1;
     width: 40px;
     height: 40px;
     position: relative;
@@ -38,72 +38,72 @@
       opacity: 1;
     }
   }
-  & nav {
-    width: 80%;
-    height: 100dvh;
-    padding: 68px 8px 8px 32px;
-    box-sizing: border-box;
-    background-color: white;
-    position: absolute;
-    display: flex;
-    overflow-y: auto;
-    gap: 16px;
-    flex-direction: column;
-    top: 0;
-    right: 0;
-    box-shadow: -2px 0 2px lightgray;
-    transform: translateX(100%);
-    opacity: 0;
-    transition:
-      transform 0.3s ease,
-      opacity 0.3s ease;
-    .nav-tab {
-      width: 100%;
-      display: grid;
-      grid-template-rows: max-content 0fr;
-      transition: grid-template-rows 0.3s ease;
-      position: relative;
-      & ul {
-        overflow-y: hidden;
-        list-style: none;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        li:first-child {
-          padding-top: 16px;
-        }
-        li:last-child {
-          padding-bottom: 16px;
-        }
-      }
-      & a {
-        text-decoration: none;
-        color: var(--secondary-dark);
-      }
-      a.active {
-        font-weight: 800;
-        color: var(--accent-color);
-      }
-    }
-    .nav-tab:has(.active) {
-      .nav-tab-title {
-        font-weight: 800;
-        color: var(--accent-color);
-      }
-    }
-    .nav-tab-title {
+}
+
+.mobile-menu {
+  width: 80%;
+  height: 100dvh;
+  padding: 68px 8px 8px 32px;
+  box-sizing: border-box;
+  background-color: white;
+  position: fixed;
+  display: flex;
+  overflow-y: auto;
+  gap: 16px;
+  flex-direction: column;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  opacity: 0;
+  transition:
+    transform 0.3s ease,
+    opacity 0.3s ease;
+  .nav-tab {
+    width: 100%;
+    display: grid;
+    grid-template-rows: max-content 0fr;
+    transition: grid-template-rows 0.3s ease;
+    position: relative;
+    & ul {
+      overflow-y: hidden;
+      list-style: none;
+      margin: 0;
       display: flex;
+      flex-direction: column;
       gap: 8px;
-      align-items: center;
-      cursor: pointer;
+      li:first-child {
+        padding-top: 16px;
+      }
+      li:last-child {
+        padding-bottom: 16px;
+      }
     }
-    .show {
-      grid-template-rows: max-content 1fr;
+    & a {
+      text-decoration: none;
+      color: var(--secondary-dark);
+    }
+    a.active {
+      font-weight: 800;
+      color: var(--accent-color);
     }
   }
-  .open {
-    transform: translateX(0);
-    opacity: 1;
+  .nav-tab:has(.active) {
+    .nav-tab-title {
+      font-weight: 800;
+      color: var(--accent-color);
+    }
   }
+  .nav-tab-title {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    cursor: pointer;
+  }
+  .show {
+    grid-template-rows: max-content 1fr;
+  }
+}
+.open {
+  transform: translateX(0);
+  opacity: 1;
 }
