--- a/app/src/main.css
+++ b/app/src/main.css
@@ -6,10 +6,15 @@
   --secondary-dark: #3d4145;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
