--- a/app/src/routes/Contacto.module.css
+++ b/app/src/routes/Contacto.module.css
@@ -69,7 +69,7 @@
 .patient-details {
   background-color: #f5f7fb;
   box-shadow: 0 0 5px lightgray;
-  padding: 5vh 2vw;
+  padding: 16px;
   border-radius: 10px;
   margin-bottom: 32px;
   & fieldset {
@@ -188,6 +188,10 @@ input::placeholder {
   .phone,
   .address {
     justify-content: center;
+  }
+  .form-container {
+    min-width: 200px;
+    max-width: 100%;
   }
   .patient-details {
     & label {
