--- a/app/src/routes/servicios/Servicio.module.css
+++ b/app/src/routes/servicios/Servicio.module.css
@@ -38,6 +38,7 @@
 .description {
   text-align: center;
   padding: 0 32px;
+  padding-top: 32px;
   box-sizing: border-box;
   & img {
     margin: 32px 0;
@@ -141,6 +142,7 @@
   }
   .description {
     padding: 0 16px;
+    padding-top: 16px;
     & img {
       width: 80%;
       border-radius: 16px;
