--- a/app/src/routes/servicios/Servicios.module.css
+++ b/app/src/routes/servicios/Servicios.module.css
@@ -186,13 +186,13 @@
 }
 
 @media (max-width: 600px) {
-  .main-container {
-    text-align: center;
-  }
   .intro {
     flex-direction: column-reverse;
     .intro-text {
       width: 100%;
+    }
+    & img {
+      max-width: 80%;
     }
   }
   .main-text {
@@ -218,6 +218,8 @@
     gap: 16px;
     h2 {
       font-size: 24px;
+      text-align: center;
+      padding-bottom: 16px;
     }
     h3 {
       font-size: 20px;
@@ -255,5 +257,8 @@
       }
       width: 100%;
     }
+  }
+  .intro-text {
+    text-align: center;
   }
 }
