--- a/app/src/routes/Index.module.css
+++ b/app/src/routes/Index.module.css
@@ -163,6 +163,29 @@
     margin: 0;
     text-align: center;
   }
+  .review-cta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h3 {
+      color: var(--secondary-dark);
+    }
+    .review-button {
+      font-size: 18px;
+      text-align: center;
+      padding: 14px 23px;
+      border: solid 1px var(--accent-color);
+      color: var(--accent-color);
+      border-radius: 23px;
+      text-decoration: none;
+    }
+    .review-button:hover {
+      border: solid 1px var(--bg-light);
+      transform: scale(1.01);
+      cursor: pointer;
+      color: var(--bg-light);
+    }
+  }
 }
 
 .cta-container {
