--- a/app/src/routes/Contacto.module.css
+++ b/app/src/routes/Contacto.module.css
@@ -84,7 +84,7 @@
     border: none;
     display: flex;
     flex-direction: column;
-    gap: 5vh;
+    gap: 32px;
     justify-content: center;
     margin: 0;
     padding: 0;
@@ -115,7 +115,7 @@ select {
 
 legend {
   font-size: 24px;
-  margin-bottom: 5vh;
+  margin-bottom: 32px;
 }
 
 label {
