--- a/app/src/routes/Contacto.module.css
+++ b/app/src/routes/Contacto.module.css
@@ -146,7 +146,7 @@ input:focus {
   border: solid #e35d5d;
 }
 
-.error {
+.error-message {
   font-size: 10px;
   color: #e35d5d;
   margin-top: 2px;
