--- a/app/src/routes/Contacto.module.css
+++ b/app/src/routes/Contacto.module.css
@@ -152,6 +152,12 @@ input:focus {
   margin-top: 2px;
   margin-bottom: 2px;
 }
+.error {
+  color: #e35d5d;
+}
+.success {
+  color: #9fd99c;
+}
 
 .submit-button {
   font-size: 18px;
