--- a/app/src/routes/Review.module.css
+++ b/app/src/routes/Review.module.css
@@ -107,16 +107,8 @@
     .valid-input {
       border: solid #9fd99c;
     }
-
     .invalid-input {
       border: solid #e35d5d;
-    }
-
-    .error {
-      font-size: 10px;
-      color: #e35d5d;
-      margin-top: 2px;
-      margin-bottom: 2px;
     }
 
     .submit-button {
@@ -148,6 +140,19 @@
       text-align: center;
     }
   }
+}
+
+.error-message {
+  font-size: 10px;
+  color: #e35d5d;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.error {
+  color: #e35d5d;
+}
+.success {
+  color: #9fd99c;
 }
 .star-rating {
   font-size: 20px;
